<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".controller.fragment.subFragment.devis.StepOneFragment">

    <RelativeLayout
        android:id="@+id/receiver_or_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/relative_choice"
        android:layout_marginBottom="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/received_amount"
            android:textColor="@color/colorTextBackground"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/received_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:checked="false"
                android:text="@string/oui" />

            <RadioButton
                android:id="@+id/received_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/non" />

        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_choice"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="370dp">

        <include
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            layout="@layout/from_layout"/>

        <include
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/from"
            layout="@layout/to_layout"/>

    </RelativeLayout>

</RelativeLayout>