<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    tools:context=".controller.activity.RateActivity">

    <LinearLayout
        android:id="@+id/linearDataEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_empty"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/empty"
            app:tint="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/txt_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:textStyle="bold"/>

    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:theme="@style/Theme.MoneyClap.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/money_clap_logo" />

                <TextView
                    android:id="@+id/rate_title"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_toEndOf="@id/logo"
                    android:gravity="center"
                    android:text="@string/transfert_rate"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:theme="@style/ThemeOverlay.SearchView" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/transparent_background">

                <ImageView
                    android:id="@+id/research_img"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_search_24"
                    app:tint="@android:color/darker_gray" />

                <View
                    android:id="@+id/research_view"
                    android:layout_width="1dp"
                    android:layout_height="45dp"
                    android:layout_toEndOf="@id/research_img"
                    android:background="@drawable/gradient_background" />

                <EditText
                    android:id="@+id/amountEdt"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_toEndOf="@id/research_view"
                    android:background="@android:color/transparent"
                    android:gravity="start|center_vertical"
                    android:hint="@string/type_amount"
                    android:imeOptions="actionDone"
                    android:inputType="numberSigned"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor" />

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/app_bar_layout"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="From"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorTextBackgroundSecondary"/>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="Min"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorTextBackgroundSecondary"/>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="Max"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorTextBackgroundSecondary"/>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="Frais"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorTextBackgroundSecondary"/>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="FAM"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorTextBackgroundSecondary"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/linearHeader"
        android:layout_above="@id/rateLinearBottom">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/rate_layout" />

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/rateLinearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/rateFromGabon"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_background"
            android:text="@string/from_gabon"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:enabled="true"/>

        <Button
            android:id="@+id/rateFromFrance"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorGrayLight"
            android:text="@string/from_france"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:enabled="false"/>

    </LinearLayout>

</RelativeLayout>